# dichvariables-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  smoke_test.py
backend/: dataframe.py  frontend_assets.py  main.py  models.py  pipeline.py
backend/public/: app.js  index.html  styles.css
backend/routers/: analyze.py
backend/services/: associations_matrix.py  brand_associations.py  dendrogram.py  distances.py  graph.py  segmentation.py
docs/: STATISTICS.md
scripts/: generate_frontend_assets.py
