[project]
name = "dichvariables-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "pyarrow>=15.0.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
]

[tool.vercel]
entrypoint = "backend.main:app"
